--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,16 @@ section {
 }
 
 h2 {
+    padding: 1rem 0;
+    margin: 0 0 0.2rem;
+    background-image: linear-gradient(90deg, #b2d5de 0 25%, #ddcfb3 25% 50%, #b3ddb4 50% 75%, #ddbab3 75%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.3rem;
+    background-position: bottom;
     color: #fff;
-    margin-top: 0;
+    font-weight: bold;
+    font-size: 26px;
+    text-align: center;
 }
 
 .section-subtitle {
@@ -709,6 +717,11 @@ nav ul li a:hover {
 
 #purpose p:hover::before, #mission p:hover::before {
     opacity: 0.4;
+}
+
+.highlight {
+    font-weight: bold;
+    background: linear-gradient(transparent 60%, rgba(255, 105, 180, 0.4) 60%);
 }
 
 @keyframes backgroundAnimation {
